# zalo-rs

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  observability.rs
crates/zalo-bot/: Cargo.toml
crates/zalo-bot/src/: error.rs  lib.rs  observability.rs  webhook.rs
crates/zalo-sdk/: Cargo.toml
crates/zalo-sdk/src/: context.rs  error.rs  lib.rs
crates/zalo-types/: Cargo.toml
crates/zalo-types/src/: config.rs  error.rs  lib.rs
docs/: ARCH.md  README.ru.md  README.vi.md  progress.md
examples/bot-axum/: Cargo.toml
examples/bot-axum/src/: main.rs
examples/miniapp-leptos/: Cargo.toml
examples/miniapp-leptos/src/: lib.rs
