[workspace]
members = [
    "crates/zalo-types",
    "crates/zalo-sdk",
    "crates/zalo-bot",
    "examples/miniapp-leptos",
    "examples/bot-axum",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Zalo Bot Team <dev@zalo.ai>"]
description = "Zalo bot platform implemented in Rust"

[workspace.dependencies]
figment = { version = "0.10", features = ["env", "toml"] }
masterror = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "2.0"
