[package]
name = "zalo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core utilities for the Zalo bot platform"
license.workspace = true

[dependencies]
figment.workspace = true
masterror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.22.0"
