[package]
name = "zalo-bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Zalo Official Account bot client and webhook utilities"
license.workspace = true

[dependencies]
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
zalo-types = { path = "../zalo-types" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
