[package]
name = "zalo-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared types, configuration and error definitions for the Zalo platform"
license.workspace = true

[dependencies]
figment.workspace = true
masterror.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.22.0"
